<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jokes MK</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="my_profile">Мој Профил</string>

    <string name="btn_text_newest">Најнови</string>
    <string name="btn_text_most_popular">Најпопуларни</string>
    <string name="btn_text_my_profile">Мој Профил</string>
    
    <string name="txt_user_name">Корисничко име</string>
    <string name="edittxt_hint_user_name">Внесете корисничко име</string>
    <string name="txt_user_city">Град</string>
    <string name="edittxt_hint_user_city">Внесете град</string>
    <string name="txt_user_sex">Пол</string>
    <string name="rbtn_male">Машко</string>
    <string name="rbtn_female">Женско</string>
    <string name="txt_date">Датум</string>
    <string name="btn_hint_date">Внесете датум на раѓање</string>
    <string name="btn_choose_image">Избери слика</string>
    <string name="btn_save_profile">Зачувај</string>
    
    <string name="action_add">Испрати виц</string>
   
</resources>
