<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bacground"
    android:paddingLeft="@dimen/activity_img_categories_margin"
    android:paddingTop="@dimen/activity_img_categories_margin"
    android:paddingRight="@dimen/activity_img_categories_margin"
    android:paddingBottom="@dimen/activity_img_categories_margin" >
    
    <ImageView 
        android:id="@+id/img_profile_picture"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/empty"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        />
    
    <TextView 
        android:id="@+id/txt_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/txt_user_name"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        android:layout_below="@id/img_profile_picture"
        android:textStyle="bold"/>
    
    <EditText 
        android:id="@+id/edittxt_user_name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/edittxt_hint_user_name"
        android:layout_below="@id/txt_user_name"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        android:singleLine="true"
        />
    
    <TextView 
        android:id="@+id/txt_user_city"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/txt_user_city"
        android:layout_below="@id/edittxt_user_name"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        android:textStyle="bold"/>
    
    <EditText 
        android:id="@+id/edittxt_user_city"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/edittxt_hint_user_city"
        android:layout_below="@id/txt_user_city"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        android:singleLine="true" />
        
     <TextView 
        android:id="@+id/txt_date"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/txt_date"
        android:layout_below="@id/edittxt_user_city"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        android:textStyle="bold"/>
     
      <Button 
        android:id="@+id/btn_date_picker"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/txt_date"
        android:hint="@string/btn_hint_date"
        android:textColorHint="#000000"
        android:background="@drawable/buttonshape"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        />
    
    <TextView
        android:id="@+id/txt_user_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rbtn_male"
        android:layout_alignBottom="@+id/rbtn_male"
        android:layout_alignLeft="@+id/txt_date"
        android:gravity="center"
        android:text="@string/txt_user_sex"
        android:layout_marginBottom="@dimen/activity_img_categories_margin"
        android:layout_below="@id/btn_date_picker" 
        android:textStyle="bold"/>
        
    <RadioButton
        android:id="@+id/rbtn_female"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_date"
        android:layout_below="@+id/btn_date_picker"
        android:layout_marginRight="34dp"
        android:text="@string/rbtn_female"
         />

    <RadioButton
        android:id="@+id/rbtn_male"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/rbtn_female"
        android:layout_alignBottom="@+id/rbtn_female"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/rbtn_female"
        android:text="@string/rbtn_male"
         />

 	<Button
 	    android:id="@+id/btn_choose_image"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:layout_alignBottom="@+id/img_profile_picture"
 	    android:layout_alignRight="@+id/txt_user_name"
 	    android:layout_marginBottom="27dp"
 	    android:layout_marginRight="16dp"
 	    android:background="@drawable/buttonshape"
 	    android:text="@string/btn_choose_image"
 	    android:layout_toRightOf="@id/img_profile_picture"
 	    android:layout_marginLeft="@dimen/activity_my_profile_margin"
 	     />
 	
 	<Button
 	    android:id="@+id/btn_save_profile"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:text="@string/btn_save_profile"
 	    android:layout_alignParentBottom="true"
 	    android:background="@drawable/buttonshape"
 	     />
 	


</RelativeLayout>
