<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@color/activity_bacground" >
    
    <Button
        android:id="@+id/btn_newest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/jokes_list"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_text_newest"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:width="100dp" />
    
    <Button
        android:id="@+id/btn_my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/jokes_list"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_text_my_profile"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:width="100dp" />

    <Button
        android:id="@+id/btn_most_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_my_profile"
        android:layout_alignBottom="@+id/btn_my_profile"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttonshape"
        android:text="@string/btn_text_most_popular"
        android:textSize="12sp"
        android:textStyle="bold"
        android:typeface="serif"
        android:width="100dp" />
    
     <ListView 
        android:id="@+id/jokes_list"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_below="@id/btn_newest"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/list_color">
        
         
    </ListView>

</RelativeLayout>
